Fix sidebar overflow

--- a/less/_helpers.less
+++ b/less/_helpers.less
@@ -69,6 +69,7 @@
 
   .esper-left-sidebar {
     border-right: 1px solid @table-border-color;
+    overflow-x: hidden;
   }
 
   // e.g. if panel is only element
